# tanaka

./: .gitignore  CMakeLists.txt  README.md  install_dep.sh  main.cpp
.github/workflows/: ci.yml
include/: ui.h
include/config/: config.h
include/dao/: sync_folder_dao.h  tracked_folder_dao.h
include/db/: database.h
include/service/: tracked_folder_service.h
include/utils/: logger.h  utils.h
scripts/: install_dep.sh
src/: main.cpp  ui.cpp
src/config/: config.cpp
src/dao/: sync_folder_dao.cpp  tracked_folder_dao.cpp
src/db/: database.cpp
src/service/: track_folder_service.cpp
src/utils/: logger.cpp  utils.cpp
tests/: CMakeLists.txt  test_ui.cpp
tests/config/: test_config.cpp
tests/dao/: test_sync_folders_dao.cpp  test_tracked_folders_dao.cpp
tests/db/: test_database.cpp
tests/utils/: test_utils.cpp
ui/: ui.cpp  ui.h
utils/: logger.cpp
